[gd_scene load_steps=4 format=3 uid="uid://cukk866m6mdlq"]

[ext_resource type="Script" path="res://Scripts/build_card_script.gd" id="1_m3woh"]
[ext_resource type="Texture2D" uid="uid://dgrcu5sb8c86e" path="res://Resources/Images/Rooms/rooms.png" id="2_tq0sq"]
[ext_resource type="Theme" uid="uid://dfeo3ebchf3ul" path="res://Resources/Themes/Default_Theme.tres" id="3_1jv4c"]

[node name="BuildCardUi" type="Node2D"]
script = ExtResource("1_m3woh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_top = 64.0
offset_right = 256.0
offset_bottom = 688.0
color = Color(0.631373, 0.898039, 0.658824, 1)

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
texture_filter = 1
position = Vector2(128, 80)
scale = Vector2(6.845, 6.845)
texture = ExtResource("2_tq0sq")
region_enabled = true
region_rect = Rect2(0, 0, 32, 18)

[node name="RoomTittle" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 144.0
offset_right = 248.0
offset_bottom = 176.0
theme = ExtResource("3_1jv4c")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Room name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price_TradeGood" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 176.0
offset_right = 128.0
offset_bottom = 199.0
theme = ExtResource("3_1jv4c")
theme_override_colors/font_color = Color(1, 0.701961, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 0, 1)
theme_override_constants/outline_size = 8
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Price_Resource" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 128.0
offset_top = 176.0
offset_right = 248.0
offset_bottom = 199.0
theme = ExtResource("3_1jv4c")
theme_override_colors/font_color = Color(0.741385, 0.741385, 0.741385, 1)
theme_override_colors/font_outline_color = Color(0.393086, 0.393086, 0.393085, 1)
theme_override_constants/outline_size = 8
text = "20"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RoomQuote" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 199.0
offset_right = 248.0
offset_bottom = 264.0
theme = ExtResource("3_1jv4c")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Room quote"
autowrap_mode = 3

[node name="RoomEffect" type="Label" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 264.0
offset_right = 248.0
offset_bottom = 545.0
theme = ExtResource("3_1jv4c")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 8
text = "Room effect"
autowrap_mode = 3

[node name="BuildButton" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 9.0
offset_top = 553.0
offset_right = 249.0
offset_bottom = 616.0
theme = ExtResource("3_1jv4c")
theme_override_font_sizes/font_size = 30
text = "Build"

[connection signal="pressed" from="ColorRect/BuildButton" to="." method="_on_build_button_pressed"]
